examples/type_system/failing/43_main_unhandled_custom_effect.flx
// parity-expected-stdout-begin
// "x"
// parity-expected-stdout-end
// expect: compile_error

// E406: custom effects must be discharged before returning from main.

effect Console {
    print: String -> ()
}

fn log(msg: String) -> Unit with Console {
    perform Console.print(msg)
}

fn main() -> Unit with Console {
    log("x");
}
